--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -1,71 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="100dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/artwork"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="@dimen/space_normal"
-        android:contentDescription="@string/artwork"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/star" />
+    <data>
 
-    <TextView
-        android:id="@+id/track_name"
-        style="@style/Title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/space_normal"
-        android:padding="@dimen/space_normal"
-        app:layout_constraintBottom_toTopOf="@+id/collection_name"
-        app:layout_constraintEnd_toStartOf="@+id/favorite"
-        app:layout_constraintStart_toEndOf="@+id/artwork"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:text="Track Name" />
+        <variable
+            name="track"
+            type="com.example.greenday.network.Track" />
+    </data>
 
-    <TextView
-        android:id="@+id/collection_name"
-        style="@style/Description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/space_normal"
-        android:paddingHorizontal="@dimen/space_normal"
-        app:layout_constraintBottom_toTopOf="@+id/artist_name"
-        app:layout_constraintEnd_toStartOf="@+id/favorite"
-        app:layout_constraintStart_toEndOf="@+id/artwork"
-        app:layout_constraintTop_toBottomOf="@+id/track_name"
-        tools:text="Collection Name" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp">
 
-    <TextView
-        android:id="@+id/artist_name"
-        style="@style/Description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/space_normal"
-        android:paddingHorizontal="@dimen/space_normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/favorite"
-        app:layout_constraintStart_toEndOf="@+id/artwork"
-        app:layout_constraintTop_toBottomOf="@+id/collection_name"
-        tools:text="Artist Name" />
+        <ImageView
+            android:id="@+id/artwork"
+            loadImage="@{track.artworkUrl100}"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="@dimen/space_normal"
+            android:contentDescription="@string/artwork"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/star" />
 
-    <ToggleButton
-        android:id="@+id/favorite"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="@dimen/space_normal"
-        android:background="@drawable/favorite"
-        android:textOff=""
-        android:textOn=""
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/track_name"
+            style="@style/Title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_normal"
+            android:paddingHorizontal="@dimen/space_normal"
+            android:text="@{track.trackName}"
+            app:layout_constraintBottom_toTopOf="@+id/collection_name"
+            app:layout_constraintEnd_toStartOf="@+id/favorite"
+            app:layout_constraintStart_toEndOf="@+id/artwork"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="Track Name" />
+
+        <TextView
+            android:id="@+id/collection_name"
+            style="@style/Description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_normal"
+            android:paddingHorizontal="@dimen/space_normal"
+            android:text="@{track.collectionName}"
+            app:layout_constraintBottom_toTopOf="@+id/artist_name"
+            app:layout_constraintEnd_toStartOf="@+id/favorite"
+            app:layout_constraintStart_toEndOf="@+id/artwork"
+            app:layout_constraintTop_toBottomOf="@+id/track_name"
+            tools:text="Collection Name" />
+
+        <TextView
+            android:id="@+id/artist_name"
+            style="@style/Description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_normal"
+            android:paddingHorizontal="@dimen/space_normal"
+            android:text="@{track.artistName}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/favorite"
+            app:layout_constraintStart_toEndOf="@+id/artwork"
+            app:layout_constraintTop_toBottomOf="@+id/collection_name"
+            tools:text="Artist Name" />
+
+        <ToggleButton
+            android:id="@+id/favorite"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="@dimen/space_normal"
+            android:background="@drawable/favorite"
+            android:textOff=""
+            android:textOn=""
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
