List Paging Finished

--- a/app/src/main/res/layout/fragment_track_list.xml
+++ b/app/src/main/res/layout/fragment_track_list.xml
@@ -11,6 +11,12 @@
         <variable
             name="trackList"
             type="ObservableArrayList&lt;Track&gt;" />
+        <variable
+            name="viewmodel"
+            type="com.example.greenday.viewmodel.ItunesViewModel" />
+        <variable
+            name="module"
+            type="com.example.greenday.list.Module" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
