Favorite 추가, 제거, 리스트에 표시 기능 완료

--- a/app/src/main/res/layout/fragment_track_list.xml
+++ b/app/src/main/res/layout/fragment_track_list.xml
@@ -5,7 +5,7 @@
 
     <data>
         <import type="androidx.databinding.ObservableArrayList" />
-        <import type="com.example.greenday.network.Track" />
+        <import type="com.example.greenday.iTunes.Track" />
 
         <variable
             name="trackList"
@@ -15,7 +15,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".TrackListFragment">
+        tools:context=".view.TrackListFragment">
 
         <TextView
             android:id="@+id/title"
