--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -6,6 +6,9 @@
     <data>
 
         <variable
+            name="viewmodel"
+            type="com.example.greenday.viewmodel.TrackListViewModel" />
+        <variable
             name="track"
             type="com.example.greenday.iTunes.Track" />
     </data>
