--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -14,5 +14,11 @@
         android:id="@+id/favoriteFragment"
         android:name="com.example.greenday.view.FavoriteFragment"
         android:label="@string/main_menu_favorite"
-        tools:layout="@layout/fragment_favorite" /><action android:id="@+id/action_global_trackListFragment" app:destination="@id/trackListFragment"/><action android:id="@+id/action_global_favoriteFragment" app:destination="@id/favoriteFragment"/>
+        tools:layout="@layout/fragment_track_list" />
+    <action
+        android:id="@+id/action_global_trackListFragment"
+        app:destination="@id/trackListFragment" />
+    <action
+        android:id="@+id/action_global_favoriteFragment"
+        app:destination="@id/favoriteFragment" />
 </navigation>
