--- a/app/src/main/res/layout/fragment_track_list.xml
+++ b/app/src/main/res/layout/fragment_track_list.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <import type="androidx.databinding.ObservableArrayList" />
+
         <import type="com.example.greenday.iTunes.Track" />
 
         <variable
@@ -15,6 +17,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/black"
         tools:context=".view.TrackListFragment">
 
         <TextView
@@ -23,7 +26,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingVertical="@dimen/space_normal"
+            android:paddingVertical="@dimen/space_big"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -41,6 +44,14 @@
             app:layout_constraintTop_toBottomOf="@+id/title"
             tools:itemCount="6"
             tools:listitem="@layout/item_track" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1.5dp"
+            android:background="@color/black_light"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
