--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -12,24 +12,26 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:padding="@dimen/space_normal">
 
         <ImageView
             android:id="@+id/artwork"
             loadImage="@{track.artworkUrl100}"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="@dimen/image_normal"
+            android:layout_height="@dimen/image_normal"
             android:layout_margin="@dimen/space_normal"
             android:contentDescription="@string/artwork"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/star" />
+            tools:src="@drawable/round_star" />
 
         <TextView
             android:id="@+id/track_name"
-            style="@style/Title"
+            style="@style/TextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/space_normal"
@@ -63,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/space_normal"
             android:paddingHorizontal="@dimen/space_normal"
-            android:text="@{track.artistName+track.trackId}"
+            android:text="@{track.artistName}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/favorite"
             app:layout_constraintStart_toEndOf="@+id/artwork"
@@ -72,15 +74,27 @@
 
         <ToggleButton
             android:id="@+id/favorite"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/image_small"
+            android:layout_height="@dimen/image_small"
             android:layout_marginEnd="@dimen/space_normal"
-            android:background="@drawable/favorite"
+            android:background="@drawable/button_favorite_background"
             android:checked="@{track.favorite}"
             android:textOff=""
             android:textOn=""
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            style="@style/SelectableItemBackground"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
