--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,10 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="gray">#FFaaaaaa</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="white_transparent">#28FFFFFF</color>
+    <color name="gray">#b3b3b3</color>
+    <color name="black_light">#1d1d1d</color>
+
 </resources>
