--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,12 @@
 <resources>
-    <dimen name="text_small">13sp</dimen>
-    <dimen name="text_normal">17sp</dimen>
-    <dimen name="text_big">20sp</dimen>
+    <dimen name="text_normal">14sp</dimen>
+    <dimen name="text_big">24sp</dimen>
 
-    <dimen name="space_normal">10dp</dimen>
+    <dimen name="space_normal">6dp</dimen>
+    <dimen name="space_big">8dp</dimen>
+
+    <dimen name="image_small">28dp</dimen>
+    <dimen name="image_normal">56dp</dimen>
+
+    <dimen name="artwork_rounding_radius">3dp</dimen>
 </resources>
