--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -4,13 +4,15 @@
     <style name="TextView">
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
+        <item name="android:textSize">@dimen/text_normal</item>
+        <item name="android:textColor">@color/white</item>
     </style>
     <style name="Title" parent="TextView">
         <item name="android:textSize">@dimen/text_big</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
     </style>
     <style name="Description" parent="TextView">
-        <item name="android:textSize">@dimen/text_small</item>
+        <item name="android:textSize">@dimen/text_normal</item>
         <item name="android:textColor">@color/gray</item>
     </style>
 
