--- a/app/src/main/res/layout/fragment_track_list.xml
+++ b/app/src/main/res/layout/fragment_track_list.xml
@@ -4,12 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <import type="android.view.View" />
-
         <import type="androidx.databinding.ObservableArrayList" />
-
-        <import type="com.example.greenday.iTunes.Track" />
+        <import type="com.example.greenday.remoteDataSource.Track" />
 
         <variable
             name="trackList"
@@ -62,7 +59,7 @@
             android:text="@string/list_empty"
             android:textColor="@color/gray"
             android:textSize="@dimen/text_normal"
-            android:visibility="@{trackList.size()==0? View.VISIBLE : View.GONE }"
+            android:visibility="@{trackList.size()==0? View.VISIBLE : View.GONE, default=gone}"
             app:layout_constraintBottom_toBottomOf="@+id/trackList"
             app:layout_constraintEnd_toEndOf="@+id/trackList"
             app:layout_constraintStart_toStartOf="@+id/trackList"
