--- a/app/src/main/res/layout/fragment_track_list.xml
+++ b/app/src/main/res/layout/fragment_track_list.xml
@@ -53,10 +53,10 @@
             app:layout_constraintTop_toBottomOf="@+id/title" />
 
         <TextView
+            android:id="@+id/emptyListText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/list_empty"
             android:textColor="@color/gray"
             android:textSize="@dimen/text_normal"
             android:visibility="@{trackList.size()==0? View.VISIBLE : View.GONE, default=gone}"
@@ -64,7 +64,6 @@
             app:layout_constraintEnd_toEndOf="@+id/trackList"
             app:layout_constraintStart_toStartOf="@+id/trackList"
             app:layout_constraintTop_toTopOf="@+id/trackList" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
